--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,24 +7,59 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            font-family: 'Montserrat', sans-serif;
         }
 
         #timeline-container {
             width: 100%;
-            height: 600px;
-            background-color: #1A365D;
-            /* UEFA blue */
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
+            height: 100%;
+            position: relative;
+            background: linear-gradient(90deg, #1A365D, #24497c);
+        }
+
+        #start-button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        #replay-button {
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+        }
+
+        .title {
+            font-weight: 700;
+            font-size: 28px;
+            fill: #FFD700;
+        }
+
+        .subtitle {
+            font-weight: 400;
+            font-size: 18px;
+            fill: white;
+        }
+
+        .description {
+            font-weight: 400;
+            font-size: 13px;
+            fill: white;
+        }
+
+        .hint {
+            font-size: 12px;
+            fill: #779dd2;
         }
 
         .timeline-line {
-            stroke: #FFFFFF;
             stroke: #FFD700;
             stroke-width: 2;
         }
@@ -42,7 +76,6 @@
         .year-label {
             font-size: 14px;
             fill: #FFD700;
-            /* Gold color for years */
             font-weight: bold;
         }
 
@@ -59,10 +92,11 @@
         }
 
         .tooltip {
+            font-family: 'Montserrat', sans-serif;
             position: absolute;
             background-color: rgba(255, 255, 255, 0.9);
-            border: 1px solid #ddd;
-            border-radius: 4px;
+            color: #333;
+            border-radius: 5px;
             padding: 10px;
             font-size: 12px;
             pointer-events: none;
@@ -74,89 +108,6 @@
 
         .year-tooltip {
             z-index: 1000;
-        }
-
-        body {
-            font-family: 'Montserrat', sans-serif;
-            background-color: #161616;
-            color: #ffffff;
-        }
-
-        #timeline-container {
-            width: 100%;
-            height: 600px;
-            background: linear-gradient(90deg, #161616, #333333);
-            border-radius: 5px;
-            box-shadow: 0px 0px 4px 0px black;
-        }
-
-        #timeline-container {
-            width: 100%;
-            height: 600px;
-            background: linear-gradient(90deg, #1A365D, #24497c);
-            border-radius: 5px;
-            box-shadow: 0px 0px 4px 0px black;
-        }
-
-
-        .title {
-            font-weight: 700;
-            font-size: 28px;
-            fill: #FFD700;
-            /* UEFA gold color */
-        }
-
-        .subtitle {
-            font-weight: 400;
-            font-size: 18px;
-            fill: white;
-        }
-
-        .description {
-            font-weight: 400;
-            font-size: 13px;
-            fill: white;
-        }
-
-        .timeline-line {
-            stroke: #FFD700;
-            stroke-width: 2;
-        }
-
-        .country-flag {
-            cursor: pointer;
-        }
-
-        .country-label {
-            font-size: 12px;
-            fill: #FFFFFF;
-        }
-
-        .year-label {
-            font-size: 14px;
-            fill: #FFD700;
-            font-weight: bold;
-        }
-
-        .tooltip {
-            font-family: 'Montserrat', sans-serif;
-            position: absolute;
-            background-color: rgba(255, 255, 255, 0.9);
-            color: #333;
-            border-radius: 5px;
-            padding: 10px;
-            font-size: 12px;
-            pointer-events: none;
-        }
-
-        .hint {
-            font-size: 12px;
-            fill: #999;
-        }
-
-        .hint {
-            font-size: 12px;
-            fill: #779dd2;
         }
 
         button {
@@ -177,8 +128,7 @@
 
 <body>
     <div id="timeline-container"></div>
-    <div id="start-button" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
-    <div id="replay-button" style="position: absolute; bottom: 20px; left: 20px;"></div>
+
     <script src="script.js"></script>
 </body>
 
